# Excel2Markdown

./: .env.example  .env.prod.example  .gitignore  .travis.yml  CLAUDE.md  DEPLOY.md  ExcelTestFile.xlsx  README.md  bitbucket-pipelines.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
app/: __init__.py  celery_app.py  config.py  main.py
app/api/routes/: convert.py  health.py  tasks.py
app/core/: excel_reader.py  exceptions.py  markdown_converter.py
app/schemas/: request.py  response.py
app/services/: conversion_service.py  file_handler.py
app/static/css/: styles.css
app/static/js/: progress.js  upload.js
app/tasks/: cleanup_tasks.py  conversion_tasks.py
app/templates/: base.html  error.html  index.html  progress.html  result.html
docker/: Dockerfile.app  Dockerfile.celery
docker/nginx/: Dockerfile  Dockerfile.prod  nginx.conf  nginx.prod.conf
scripts/: deploy.sh  init-letsencrypt.sh
tests/: conftest.py  test_md_create.py  test_md_get.py
tests/unit/: test_excel_reader.py  test_markdown_converter.py
